--- a/Tribute-Page.html
+++ b/Tribute-Page.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lan="en">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link href="styles.css">
     </head>
     <body>
-        
+
     </body>
 </html>
